namespaces/base/observability/kube-prometheus-stack/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: alert-manager
  namespace: observability
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.1.150
    external-dns.alpha.kubernetes.io/internal: 'true'
spec:
  hosts:
    - 'alert-manager.raspbernetes.com'
  gateways:
    - istio-system/istio-system-ingress-gateway
  http:
    - match:
        - port: 443
      route:
        - destination:
            port:
              number: 9093
            host: x-alertmanager.observability.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: observability
  annotations:
    external-dns.alpha.kubernetes.io/target: raspbernetes.com
    external-dns.alpha.kubernetes.io/external: 'true'
spec:
  hosts:
    - 'grafana.raspbernetes.com'
  gateways:
    - istio-system/istio-system-ingress-gateway
  http:
    - match:
        - port: 443
      route:
        - destination:
            port:
              number: 80
            host: grafana.observability.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
  namespace: observability
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.1.150
    external-dns.alpha.kubernetes.io/internal: 'true'
spec:
  hosts:
    - 'prometheus.raspbernetes.com'
  gateways:
    - istio-system/istio-system-ingress-gateway
  http:
    - match:
        - port: 443
      route:
        - destination:
            port:
              number: 9090
            host: x-prometheus.observability.svc.cluster.local
